Updated, 185 glyphs now.

--- a/test-woff.html
+++ b/test-woff.html
@@ -8,17 +8,20 @@
 </head>
 <body>
     <div style="font-family: robotronfont">
-        ABCDE FGHIJ KLMNO PQRST UVWXYZ 0123456789<br/>
-        abcde fghij klmno pqrst uvwxyz 0123456789<br/>
-        АБВГД ЕЁЖЗИ ЙКЛМН ОПРСТ УФХЦЧ ШЩЪЫЬ ЭЮЯ 0123456789<br/>
-        абвгд еёжзи йклмн опрст уфхцч шщъыь эюя 0123456789<br/>
-        !"#% &amp;*()+- &lt;=&gt;? @ {|}~ [/]^_ {|} $ &#163; &#164; &#165;
-        &#198; &#230; &#216; &#248;
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <p>
-            Все смешалось в доме Облонских. Жена узнала, что муж был в связи с бывшею в их доме француженкою-гувернанткой, и объявила мужу, что не может жить с ним в одном доме. Положение это продолжалось уже третий день и мучительно чувствовалось и самими супругами, и всеми членами семьи, и домочадцами. Все члены семьи и домочадцы чувствовали, что нет смысла в их сожительстве и что на каждом постоялом дворе случайно сошедшиеся люди более связаны между собой, чем они, члены семьи и домочадцы Облонских. Жена не выходила из своих комнат, мужа третий день не было дома.
-        </p>
+        <div style="font-size: 200%;">Robotron dot matrix PICA</div>
+        ABCDE FGHIJ KLMNO PQRST UVWXYZ 0123456789 !"#%&amp;*()<br/>
+        abcde fghij klmno pqrst uvwxyz 0123456789 +-&lt;=&gt;?_@<br/>
+        АБВГД ЕЁЖЗИ ЙКЛМН ОПРСТ УФХЦЧ ШЩЪЫЬ ЭЮЯ [/] ^<br/>
+        абвгд еёжзи йклмн опрст уфхцч шщъыь эюя {|} ~<br/>
+        $10.0 &#163; &#164; &#165; &#167; ?&#191;
+        &#198;&#230; &#216;&#248; &#196;&#228; &#214;&#246; &#220;&#252;
+        &#197; &#224; &#232; &#233; &#236; &#241; &#242; &#249; &#x2211;<br/>
+        <div style="font-size: 300%;">0123!ABCDE АБВГД</div>
+        <div>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        </div>
+        <div>
+            Все смешалось в доме Облонских. Жена узнала, что муж был в связи с бывшею в их доме француженкою-гувернанткой, и объявила мужу, что не может жить с ним в одном доме. Положение это продолжалось уже третий день и мучительно чувствовалось и самими супругами, и всеми членами семьи, и домочадцами. Все члены семьи и домочадцы чувствовали, что нет смысла в их сожительстве и что на каждом постоялом дворе случайно сошедшиеся люди более связаны между собой, чем они, члены семьи и домочадцы Облонских.
+        </div>
     </div>
 </body>
