--- a/test-woff.html
+++ b/test-woff.html
@@ -3,19 +3,26 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <style>
-        @font-face { font-family: "robotronfont"; font-weight: normal; font-style: normal; src: url("robotronfont.woff") format('woff'); }
+        @font-face { font-family: "robotronfontpica"; font-weight: normal; font-style: normal; src: url("robotronfontpica.woff") format('woff'); }
+        @font-face { font-family: "robotronfontelit"; font-weight: normal; font-style: normal; src: url("robotronfontelit.woff") format('woff'); }
     </style>
 </head>
 <body>
-    <div style="font-family: robotronfont">
+    <div style="font-family: robotronfontelit">
+        <div style="font-size: 200%;">Robotron dot matrix ELITE</div>
+        ABCDE FGHIJ KLMNO PQRST UVWXYZ 0123456789 !"#%&amp;*() [/] ^<br/>
+        abcde fghij klmno pqrst uvwxyz 0123456789 +-&lt;=&gt;?_@ {|} ~<br/>
+        АБВГД ЕЁЖЗИ ЙКЛМН ОПРСТ УФХЦЧ ШЩЬЫЪ ЭЮЯ $&#163;&#164;&#165;&#166;&#167; &#191;  &#x2211;&#960;<br/>
+        абвгд еёжзи йклмн опрст уфхцч шщьыъ эюя
+        &#198;&#230; &#216;&#248; &#196;&#228; &#214;&#246; &#220;&#252; &#197;<br/>
+    </div>
+    <div style="font-family: robotronfontpica">
         <div style="font-size: 200%;">Robotron dot matrix PICA</div>
-        ABCDE FGHIJ KLMNO PQRST UVWXYZ 0123456789 !"#%&amp;*()<br/>
-        abcde fghij klmno pqrst uvwxyz 0123456789 +-&lt;=&gt;?_@<br/>
-        АБВГД ЕЁЖЗИ ЙКЛМН ОПРСТ УФХЦЧ ШЩЬЫЪ ЭЮЯ [/] ^<br/>
-        абвгд еёжзи йклмн опрст уфхцч шщьыъ эюя {|} ~<br/>
-        $10.0 &#163;&#164;&#165;&#166;&#167; ?&#191;
-        &#198;&#230; &#216;&#248; &#196;&#228; &#214;&#246; &#220;&#252;
-        &#197; &#224;&#225; &#232;&#233;&#235; &#236;&#237; &#209;&#241; &#242;&#243; &#249;&#250; &#x2211;&#960;<br/>
+        ABCDE FGHIJ KLMNO PQRST UVWXYZ 0123456789 !"#%&amp;*() [/] ^<br/>
+        abcde fghij klmno pqrst uvwxyz 0123456789 +-&lt;=&gt;?_@ {|} ~<br/>
+        АБВГД ЕЁЖЗИ ЙКЛМН ОПРСТ УФХЦЧ ШЩЬЫЪ ЭЮЯ $&#163;&#164;&#165;&#166;&#167; &#191;  &#x2211;&#960;<br/>
+        абвгд еёжзи йклмн опрст уфхцч шщьыъ эюя
+        &#198;&#230; &#216;&#248; &#196;&#228; &#214;&#246; &#220;&#252; &#197;<br/>
         <div style="font-size: 300%;">0123!ABCDE АБВГД</div>
         <div>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
