More glyphs, and Sperrschrift.

--- a/test-woff.html
+++ b/test-woff.html
@@ -5,6 +5,7 @@
     <style>
         @font-face { font-family: "robotronfontpica"; font-weight: normal; font-style: normal; src: url("robotronfontpica.woff") format('woff'); }
         @font-face { font-family: "robotronfontelit"; font-weight: normal; font-style: normal; src: url("robotronfontelit.woff") format('woff'); }
+        @font-face { font-family: "robotronfontsper"; font-weight: normal; font-style: normal; src: url("robotronfontsper.woff") format('woff'); }
     </style>
 </head>
 <body>
@@ -12,7 +13,7 @@
         <div style="font-size: 200%;">Robotron dot matrix ELITE</div>
         ABCDE FGHIJ KLMNO PQRST UVWXYZ 0123456789 !"#%&amp;*() [/] ^<br/>
         abcde fghij klmno pqrst uvwxyz 0123456789 +-&lt;=&gt;?_@ {|} ~<br/>
-        АБВГД ЕЁЖЗИ ЙКЛМН ОПРСТ УФХЦЧ ШЩЬЫЪ ЭЮЯ $&#163;&#164;&#165;&#166;&#167; &#191;  &#x2211;&#960;<br/>
+        АБВГД ЕЁЖЗИ ЙКЛМН ОПРСТ УФХЦЧ ШЩЬЫЪ ЭЮЯ $&#163;&#164;&#165;&#166;&#167; &#191;&#161; &#x2211;&#960;<br/>
         абвгд еёжзи йклмн опрст уфхцч шщьыъ эюя
         &#198;&#230; &#216;&#248; &#196;&#228; &#214;&#246; &#220;&#252; &#197;<br/>
     </div>
@@ -20,10 +21,14 @@
         <div style="font-size: 200%;">Robotron dot matrix PICA</div>
         ABCDE FGHIJ KLMNO PQRST UVWXYZ 0123456789 !"#%&amp;*() [/] ^<br/>
         abcde fghij klmno pqrst uvwxyz 0123456789 +-&lt;=&gt;?_@ {|} ~<br/>
-        АБВГД ЕЁЖЗИ ЙКЛМН ОПРСТ УФХЦЧ ШЩЬЫЪ ЭЮЯ $&#163;&#164;&#165;&#166;&#167; &#191;  &#x2211;&#960;<br/>
+        АБВГД ЕЁЖЗИ ЙКЛМН ОПРСТ УФХЦЧ ШЩЬЫЪ ЭЮЯ $&#163;&#164;&#165;&#166;&#167; &#191;&#161; &#x2211;&#960;<br/>
         абвгд еёжзи йклмн опрст уфхцч шщьыъ эюя
         &#198;&#230; &#216;&#248; &#196;&#228; &#214;&#246; &#220;&#252; &#197;<br/>
-        <div style="font-size: 300%;">0123!ABCDE АБВГД</div>
+    </div>
+    <div style="font-family: robotronfontsper">
+        <div style="font-size: 200%;">Sperrschrift</div>
+    </div>
+    <div style="font-family: robotronfontpica">
         <div>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
         </div>
